# gpgpu-rainbow-raytracer

./: README.md
RainbowRayTracer/: CMakeLists.txt  RainbowRayTracer.cpp  RainbowRayTracer.cu  RainbowRayTracer.cuh  RainbowRayTracer.h  Seq.cu  Seq.cuh
